# past_work

./: README.md
auto_drivering/encoder_fusion_localization/eqyc_joy2can/: CMakeLists.txt  无标题文档
auto_drivering/encoder_fusion_localization/eqyc_joy2can/cfg/: Stanley_Parameters.yaml
auto_drivering/encoder_fusion_localization/eqyc_joy2can/include/: common.h  global_path_publisher.hpp  lateral_stanley.hpp
auto_drivering/encoder_fusion_localization/eqyc_joy2can/launch/: eqyc_joy2can_launch.launch  path_control.launch  track_control.launch
auto_drivering/encoder_fusion_localization/eqyc_joy2can/msg/: eqyc_IMCU_msg.msg
auto_drivering/encoder_fusion_localization/eqyc_joy2can/src/: EQYC_UCCAN.cpp  EQYC_UCCAN.h  eqyc_joy2can.cpp  eqyc_joy2can_2.cpp  global_path_publisher.cpp  global_path_publisher.py  lateral_stanley.cpp  lateral_stanley.py  lateral_stanley2.py  lateral_stanley_callback1.py  lateral_stanley_原始.py  odom3.txt  stanley_class.py  track_control.cpp  waypoints.npy
auto_drivering/encoder_fusion_localization/kalman_filter_pkg/: CMakeLists.txt  package.xml
auto_drivering/encoder_fusion_localization/kalman_filter_pkg/config/: config.yaml  front_end.yaml  graph_optimizer.yaml  matching.yaml
auto_drivering/encoder_fusion_localization/kalman_filter_pkg/launch/: data_pretreat.launch  front_end.launch  graph_optimization.launch  gtsam_optimization.launch  imu_encoder.launch  kalman_filter.launch  matching_node.launch
auto_drivering/encoder_fusion_localization/kalman_filter_pkg/result_map/result_2/: uwb_data.txt
auto_drivering/encoder_fusion_localization/kalman_filter_pkg/rviz/: gtsam_optimizer.rviz
auto_drivering/encoder_fusion_localization/kalman_filter_pkg/src/apps/: data_pretreat_node.cpp  front_end_node.cpp  graph_optimizer_node.cpp  gtsam_odom_optimizer_node.cpp  gtsam_optimizer_node.cpp  imu_encoder_eskf_node.cpp  kalman_filter_node.cpp  matching_node.cpp  transfer_axis.cpp
auto_drivering/encoder_fusion_localization/kalman_filter_pkg/src/data_pretreat/: data_pretreat_flow.cpp  encoder_odom_flow.cpp
auto_drivering/encoder_fusion_localization/kalman_filter_pkg/src/front_end/: front_end.cpp  front_end_flow.cpp
auto_drivering/encoder_fusion_localization/kalman_filter_pkg/src/graph_optimizer/: ceres_graph_optimizer.cpp  graph_optimizer.cpp  graph_optimizer_flow.cpp
auto_drivering/encoder_fusion_localization/kalman_filter_pkg/src/gtsam_optimizer/: gtsam_odom_optimizer_flow.cpp  gtsam_optimizer_flow.cpp
auto_drivering/encoder_fusion_localization/kalman_filter_pkg/src/imu_encoder_eskf/: imu_encoder_eskf.cpp
auto_drivering/encoder_fusion_localization/kalman_filter_pkg/src/imu_pre_integrator/: imu_pre_integrator.cpp  odom_pre_intrgrator.cpp
auto_drivering/encoder_fusion_localization/kalman_filter_pkg/src/kalman_filter/: kalman_filter.cpp  kalman_filter_flow.cpp
auto_drivering/encoder_fusion_localization/kalman_filter_pkg/src/matching/: matching.cpp  matching_flow.cpp
auto_drivering/encoder_fusion_localization/kalman_filter_pkg/src/publisher/: cloud_publisher.cpp  imu_publisher.cpp  key_frames_publisher.cpp  odometry_publisher.cpp  pos_vel_publisher.cpp
auto_drivering/encoder_fusion_localization/kalman_filter_pkg/src/sensor_data/: cloud_data.cpp  encoder_data.cpp  gnss_data.cpp  imu_data.cpp  key_frame.cpp  pose_data.cpp  velocity_data.cpp
auto_drivering/encoder_fusion_localization/kalman_filter_pkg/src/subscriber/: cloud_subscriber.cpp  encoder_subscriber.cpp  gnss_subscriber.cpp  imu_subscriber.cpp  odometry_subscriber.cpp  pose_vel_subscriber.cpp  velocity_subscriber.cpp
auto_drivering/encoder_fusion_localization/kalman_filter_pkg/src/tf_listener/: tf_listener.cpp
auto_drivering/encoder_fusion_localization/kalman_filter_pkg/src/tools/: file_manager.cpp  print_info.cpp
auto_drivering/indoor/LUVI-Mapping/: CMakeLists.txt  README.md  README_FOR_DEBUG.md  package.xml
auto_drivering/indoor/LUVI-Mapping/include/luvi-mapping/: globalOptimization.h  keyFrame.h  uwb_calibration.h
auto_drivering/indoor/LUVI-Mapping/launch/: luvi-mapping_VLP_16.launch
auto_drivering/indoor/LUVI-Mapping/map0210/: aruco_data.txt  aruco_optimized.txt
auto_drivering/indoor/LUVI-Mapping/map_0629/result_data/: aruco_data.txt  aruco_optimized.txt  uwb_data.txt  uwb_settled_postions.txt
auto_drivering/indoor/LUVI-Mapping/result_data/: aruco_data.txt  aruco_optimized.txt  uwb_data.txt
auto_drivering/indoor/LUVI-Mapping/rviz_cfg/: luvi-mapping.rviz
auto_drivering/indoor/LUVI-Mapping/src/: globalOptimization.cpp  keyFrame.cpp  laserMapping.cpp  laserOdometry.cpp  scanRegistration.cpp  uwb_calibration.cpp
auto_drivering/indoor/localization/: CMakeLists.txt  LICENSE  package.xml
auto_drivering/indoor/localization/config/: localization.yaml
auto_drivering/indoor/localization/include/: Frame.h  IMUpreintegration.h  KeyFrame.h  Utility.h  lgi_based_localization.h  localization_flow.h  map_manager.h  odom_publisher.h  parameters.h  tf_broadcaster.h
auto_drivering/indoor/localization/launch/: bag_play_2.launch  localization_node_CUHK.launch
auto_drivering/indoor/localization/result/: aruco_optimized.txt
auto_drivering/indoor/localization/rviz/: localization (copy).rviz  localization.rviz
auto_drivering/indoor/localization/src/: Frame.cpp  IMUpreintegration_node.cpp  KeyFrame.cpp  file_manager.cpp  lgi_based_localization.cpp  localization_flow.cpp  localization_node.cpp  map_manager.cpp  odom_publisher.cpp  parameters.cpp  tf_broadcaster.cpp
auto_drivering/outdoor/: README.md
auto_drivering/outdoor/mapping/gp_lio/: CMakeLists.txt  LICENSE  README.md  README_FOR_DEBUG.md  estimator_nodelet_plugins.xml  package.xml  resultfeature_cloud_for_descriptor.pcd  sample_nodelet_plugins.xml
mower/encoder_traj_display/odom_pkg/: CMakeLists.txt  package.xml  run.txt
mower/encoder_traj_display/odom_pkg/config/: config.yaml
mower/encoder_traj_display/odom_pkg/launch/: odom.launch  odom_crawler.launch  rviz.rviz
mower/encoder_traj_display/odom_pkg/src/: image_node.cpp  odom_flow.cpp  odom_node.cpp  odometry_crawler_node.cpp  odometry_node.cpp
(+1138 files in other folders)
